--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Assistente inteligente para integrações com HubSpot API">
     <meta name="author" content="Nexforce">
-    <title>HubSpot API Assistant - João Pedro Mansolelli</title>
+    <title>HubSpot API Assistant</title>
     <style>
         * {
             margin: 0;
@@ -413,7 +413,7 @@
     <div class="container">
         <div class="header">
             <div class="logo">🤖</div>
-            <h1 class="title">HubSpot API Assistant</h1>
+            <h1 class="title">HubSpot API Assistant - João Pedro Mansolelli</h1>
             <p class="subtitle">Assistente inteligente para integrações com HubSpot API</p>
             <span class="badge">Powered by AI RAG + N8N</span>
         </div>
