--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 
     <script>
         // Configuração
-        const N8N_WEBHOOK_URL = 'https://settled-saving-dog.ngrok-free.app/webhook/hubspot-assistant?ngrok-skip-browser-warning=true';
+        const N8N_WEBHOOK_URL = 'https://jpmansolelli.app.n8n.cloud/webhook/hubspot-assistant';
 
         // Função principal para enviar pergunta
         async function sendQuestion() {
